new google button

--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -142,33 +142,8 @@
     </div>
   </div>
 
-  <!-- <p>Terms of payment</p>
-
-  <div>
-    <input type="checkbox" id="plastic" name="plastic" />
-    <label for="plastic">Free</label>
+  <div class="join-us">
+    <p>Do you own a <b>waste collection</b> point?</p>
+    <button (click)="router.navigate(['/auth', 'register'])">Join us</button>
   </div>
-
-  <div>
-    <input type="checkbox" id="metal" name="metal" />
-    <label for="metal">Paid</label>
-  </div>
-
-  <div>
-    <input type="checkbox" id="paper" name="paper" />
-    <label for="paper">Profitable</label>
-  </div>
-
-  <p>Delivery options</p>
-
-  <div>
-    <input type="checkbox" id="plastic" name="plastic" />
-    <label for="plastic">Pickup</label>
-  </div>
-
-  <div>
-    <input type="checkbox" id="metal" name="metal" />
-    <label for="metal"> Delivery</label>
-  </div>
-</div> -->
 </div>
