--- a/src/app/filter/filter.component.scss
+++ b/src/app/filter/filter.component.scss
@@ -1,7 +1,7 @@
 .container {
   position: absolute;
   left: 0;
-  top:0;
+  top: 0;
   z-index: 1;
   height: 100vh;
   width: 30%;
@@ -11,6 +11,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+
   & > div {
     margin-top: 5px;
     line-height: 22px;
@@ -22,19 +23,54 @@
       margin-left: 5px;
     }
   }
+
+  .join-us {
+    background: #007eba;
+    border: 2px solid #007eba;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    padding: 30px 40px;
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 400;
+    flex-direction: column;
+    margin-top: 7%;
+
+    p {
+      margin: 0 0 20px;
+      b {
+        font-weight: 700;
+      }
+    }
+
+    button {
+      background: #ffffff;
+      border-radius: 5px;
+      padding: 13px 22px;
+      color: rgba(0, 126, 186, 1);
+      font-size: 18px;
+      font-weight: 600;
+
+      &:hover {
+        color: rgb(0, 80, 117);
+        background: #e2e2e2;
+      }
+    }
+  }
 }
 
 h2 {
   font-size: 20px;
   font-weight: 300;
-  color: #908C8C;
-  margin-bottom: 55px;
-  border-bottom: 2px solid #007EBA;
+  color: #908c8c;
+  margin-bottom: 7%;
+  border-bottom: 2px solid #007eba;
   padding: 10px;
   align-self: center;
 
   b {
-    color: #007EBA;
+    color: #007eba;
     font-weight: 700;
   }
 }
@@ -49,7 +85,7 @@ p {
   justify-content: flex-end;
   margin-bottom: 30px;
   font-size: 18px;
-  color: #D1D1D1 !important;
+  color: #d1d1d1 !important;
   position: relative;
   left: 8px;
 }
@@ -57,22 +93,20 @@ p {
 .search-input {
   width: 100%;
   height: 44px;
-  border: 1px solid #007EBA;
+  border: 1px solid #007eba;
   box-sizing: border-box;
   border-radius: 10px 0 0 10px;
   padding: 0 5px;
 }
 
 .search {
-
-  margin-bottom: 40px;
-
+  margin-bottom: 7%;
 
   button {
     width: 45px;
     height: 44px;
-    background: #007EBA;
-    border-radius: 0px 10px 10px 0px; 
+    background: #007eba;
+    border-radius: 0px 10px 10px 0px;
     color: #ffffff;
 
     &:hover {
@@ -80,7 +114,6 @@ p {
     }
 
     span {
-      
       font-size: 22px;
       position: relative;
       top: 2px;
@@ -99,10 +132,9 @@ p {
   label {
     span {
       position: relative;
-    top: 45px;
-    white-space: nowrap;
+      top: 45px;
+      white-space: nowrap;
     }
-    
   }
 }
 
