[ADD] favorite page

--- a/src/app/favourites/favourites.component.html
+++ b/src/app/favourites/favourites.component.html
@@ -1,1 +1,10 @@
-<p>favourites works!</p>
+<div class="fav-card">
+  <div class="fav-img">
+      <img src="../../assets/eco-service.png" /> 
+  </div>
+  <div class="fav-body">
+    <h4>{{favorites.summary}}</h4>
+    <p class="fav-adr">{{favorites.address}}</p>
+    <p class="fav-desc">{{favorites.description}}</p>
+  </div>
+</div>
