--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,7 +35,7 @@
 
 <ng-template #logoutTemplate> 
   <div class="auth">
-    <a [routerLink]="['/favourites']"><span class="material-icons">
+    <a [routerLink]="['/favorites']"><span class="material-icons">
     favorite_border
   </span></a>
     <a class="login" [routerLink]="['/user']" routerLinkActive="active-link" >
