--- a/src/app/pages/user-page/title/title.component.html
+++ b/src/app/pages/user-page/title/title.component.html
@@ -9,10 +9,10 @@
     </div>
     <div class="title__content">
         <div class="title__image">
-            <img src="../../../../assets/user-page/profile-image.png" alt="profile-image" width="150" height="150">
+            <img src="https://picsum.photos/150" alt="profile-image" width="150" height="150">
         </div>
         <div class="title__name">
-            <h1>Kate Doe</h1>
+            <h1>{{user?.firstname + ' ' + user?.lastname}}</h1>
             <p>FP&A and Reporting Supervisor</p>
             <div>
                 <img src="../../../../assets/user-page/location.svg" alt="">
