--- a/src/app/pages/user-page/title/title.component.scss
+++ b/src/app/pages/user-page/title/title.component.scss
@@ -10,6 +10,11 @@
   margin: 0 30px 0 10px;
 }
 
+.title__image {
+  border-radius: 50%;
+  overflow: hidden;
+}
+
 .title__header {
   display: flex;
   justify-content: space-between;
