--- a/src/app/auth/register-page/register-page.component.scss
+++ b/src/app/auth/register-page/register-page.component.scss
@@ -14,7 +14,7 @@
 .register-form-block {
     margin: auto;
     padding: 42px 0;
-    max-width: 420px;
+    width: 420px;
 }
 
 .register-form-header {
