--- a/src/app/pages/user-page/title/title.component.html
+++ b/src/app/pages/user-page/title/title.component.html
@@ -4,7 +4,7 @@
         <div class="title__buttons">
             <img src="../../../../assets/user-page/resume.svg" alt="">
             <span class="title__resume">Resume</span>
-            <button>Profile Settings</button>
+            <button (click)="changePassword()">Profile Settings</button>
         </div>
     </div>
     <div class="title__content">
