--- a/src/app/pages/user-page/user-page.component.html
+++ b/src/app/pages/user-page/user-page.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="wrapper">
-    <app-title class="title" [user]="user"></app-title>
+    <app-title class="title" [user]="user" (dialog)="openDialog()"></app-title>
     <app-aside class="aside"></app-aside>
     <app-main class="main"></app-main>
   </div>
