--- a/src/app/favourites/favourites.component.html
+++ b/src/app/favourites/favourites.component.html
@@ -1,6 +1,6 @@
 <div class="fav-card">
   <div class="fav-img">
-      <img src="../../assets/eco-service.png" /> 
+      <img src="{{favorites.type | typeimg}}" /> 
   </div>
   <div class="fav-body">
     <h4>{{favorites.summary}}</h4>
