--- a/src/app/favourites/favourites.component.scss
+++ b/src/app/favourites/favourites.component.scss
@@ -32,3 +32,14 @@ h4 {
   border-bottom: 1px solid #C4C4C4;
   
 }
+
+.fav-img {
+  width: 300px;
+  height: 200px;
+ 
+
+  img {
+    width: 300px;
+    height: 200px;
+  }
+}
